# quaternion-adjugate

./: 3D pose extraction from 2D orthographic projection with DRaM.ipynb  README.md  pyproject.toml
AdjQuat/: solutions.py
src/AdjQuat/: simulators.py  utils.py
