[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AdjQuat"
version = "0.0.1"
authors = [
  { name="Sonya Hanson", email="shanson@flatironinstitute.org" },
]
description = "Quaternion Adjugate"
readme = "README.md"
license = { file="LICENSE-CC-BY-NC-ND-4.0.md" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/flatironinstitute/quaternion-adjugate"